--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "connectionString": "mongodb://localhost/web8",
+  "connectionString": "mongodb://localhost/prisonersdilemma",
   "port": 6969
 }
